Fix dark mode shenanigans

--- a/petlistpro/src/App.css
+++ b/petlistpro/src/App.css
@@ -15,8 +15,10 @@
     --bg_color: linear-gradient(145deg, #161616, #212121);
     --border_color: rgb(26, 158, 125);
     --trans_fill: rgb(255, 255, 255, 0.19);
+    --bg_shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    --status: background-scroll var(--speed) linear infinite;
+    --speed: 750s
   }
-
 
 [data-theme='dark'] {
   --bg_color: linear-gradient(145deg, #ffffff, #c1c3c6);
@@ -25,6 +27,7 @@
   --text_fill: rgb(255, 255, 255);
   --trans_fill: rgba(4, 4, 4, 0.19);
   --border_color: rgb(229, 97, 130);
+  --bg_shadow: 0 4px 30px rgba(0, 0, 0, 0.9);
 }
 
 .background {
@@ -37,13 +40,11 @@
   position: absolute;
   filter: var(--iv);
   background-image: url(../Assets/background.png);
-  animation: background-scroll 750s linear infinite;
+  animation: var(--status);
   transition: 0.9s;
 }
 
-.background:hover {
-  animation: background-scroll 0s linear infinite;
-}
+
 
 body {
   display: flex;
@@ -51,7 +52,7 @@ body {
   align-items: center;
   margin: 0;
 	overflow: hidden;
-	animation: background-scroll 750s linear infinite;
+	animation: var(--status);
   transition: 0.9s;
 }
 
@@ -221,8 +222,7 @@ li a:hover {
   margin: 4px auto;
   background: transparent;
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7.8px);
+  box-shadow: var(--bg_shadow);
   -webkit-backdrop-filter: blur(7.8px);
   border: 1px solid rgba(255, 255, 255, 0.14);
   color: rgb(29, 29, 29);
@@ -240,16 +240,17 @@ li a:hover {
 }
 
 .pet-box {
+  color: var(--text_fill);
   transition: 0.5s;
   display: flex;
   align-items: center;
-  filter: var(--invert) !important;
   background: transparent;
   max-width: 90%;
   cursor: pointer;
 }
 
 .selected {
+  color: var(--text_fill);
   transition: 0.5s;
   font-size: 8vh;
   overflow-wrap: break-word;
@@ -374,4 +375,9 @@ li a:hover {
               inset -2px -2px 4px rgba(255, 255, 255, .5),
               inset 2px 2px 2px rgba(255, 255, 255, .075),
               inset 2px 2px 4px rgba(0, 0, 0, .15);
+}
+
+#animationToggle {
+  transition: 1s;
+  margin-top: 162px;
 }
